--- a/PcHardwareNetwork/Gemfile
+++ b/PcHardwareNetwork/Gemfile
@@ -21,8 +21,9 @@ gem 'jbuilder', '~> 2.7'
 # gem 'redis', '~> 4.0'
 # Use Active Model has_secure_password
 # gem 'bcrypt', '~> 3.1.7'
-gem 'bootstrap-sass', '~> 3.4', '>= 3.4.1'
+# gem 'bootstrap-sass', '~> 3.4', '>= 3.4.1'
 gem "bootstrap_form", "~> 4.0"
+# gem 'bootstrap', '~> 5.0.0.beta1'
 
 # Use Active Storage variant
 # gem 'image_processing', '~> 1.2'
