Added all foreign keys for the builds

--- a/PcHardwareNetwork/test/fixtures/pc_cases.yml
+++ b/PcHardwareNetwork/test/fixtures/pc_cases.yml
@@ -3,7 +3,7 @@
 one:
   brand: MyString
   name: MyString
-  type: 
+  case_type: MyString
   color: MyString
   power_supply: MyString
   side_panel_window: MyString
@@ -14,7 +14,7 @@ one:
 two:
   brand: MyString
   name: MyString
-  type: 
+  case_type: MyString
   color: MyString
   power_supply: MyString
   side_panel_window: MyString
