--- a/PcHardwareNetwork/Gemfile
+++ b/PcHardwareNetwork/Gemfile
@@ -20,7 +20,7 @@ gem 'jbuilder', '~> 2.7'
 # Use Redis adapter to run Action Cable in production
 # gem 'redis', '~> 4.0'
 # Use Active Model has_secure_password
-# gem 'bcrypt', '~> 3.1.7'
+gem 'bcrypt', '~> 3.1.7'
 # gem 'bootstrap-sass', '~> 3.4', '>= 3.4.1'
 gem "bootstrap_form", "~> 4.0"
 # gem 'bootstrap', '~> 5.0.0.beta1'
@@ -31,6 +31,7 @@ gem "bootstrap_form", "~> 4.0"
 # Reduces boot times through caching; required in config/boot.rb
 gem 'bootsnap', '>= 1.4.4', require: false
 gem 'devise'
+gem 'faker', '2.1.2'
 
 group :development, :test do
   # Call 'byebug' anywhere in the code to stop execution and get a debugger console
