--- a/PcHardwareNetwork/Gemfile
+++ b/PcHardwareNetwork/Gemfile
@@ -32,6 +32,7 @@ gem "bootstrap_form", "~> 4.0"
 gem 'bootsnap', '>= 1.4.4', require: false
 gem 'devise'
 gem 'faker', '2.1.2'
+gem 'will_paginate', '~> 3.1.0'
 
 group :development, :test do
   # Call 'byebug' anywhere in the code to stop execution and get a debugger console
